--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.4.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compileOnly 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.7.3'	
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'com.github.tomakehurst:wiremock-jre8:2.32.0'
 }
 
 tasks.named('test') {
